[tool.poetry]
name = "sms_verification"
version = "1"
description = ""
authors = ["mehrdad <mehrdad.khodaei@hotmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
